<resources>
    <string name="app_name">Exercise01</string>
    <string name="action_settings">About&#8230;</string>
    <string name="textViewRed">Red</string>
    <string name="textViewGreen">Green</string>
    <string name="textViewBlue">Blue</string>
    <string name="checkBoxStr">Use Motion Sensors</string>
    <string name="textViewColorPrev">Color Preview</string>
    <string name="radioBtnBgC">Background Color</string>
    <string name="radioBtnTC">Text Color</string>
    <string name="radioBtnBC">Button Color</string>
    <string name="radioBtnFABC">Floating Action Button Color</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="scndActLab">Exercise01 - About</string>
    <string name="button">Set Color</string>
    <string name="hexaVers">"The selected color value is (R,G,B) =</string>
</resources>
