<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.roggenbuck.exercise01.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textViewRed"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textViewGreen"
        android:textColor="#00FF00"
        app:layout_constraintBottom_toBottomOf="@+id/editTextGreen"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textViewBlue"
        android:textColor="#0000FF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBlue"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/seekBarRed"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/seekBarGreen"
        app:layout_constraintTop_toBottomOf="@+id/editTextRed" />

    <EditText
        android:id="@+id/editTextBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/seekBarBlue"
        app:layout_constraintTop_toBottomOf="@+id/editTextGreen" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="255"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="255"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRed" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="255"
        app:layout_constraintTop_toBottomOf="@+id/seekBarGreen" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginStart="16dp"
        android:text="@string/checkBoxStr"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewColorPrev"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#000000"
        android:text="@string/textViewColorPrev"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_marginBottom="128dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioBtnBgC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBtnBgC" />

        <RadioButton
            android:id="@+id/radioBtnTC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBtnTC" />

        <RadioButton
            android:id="@+id/radioBtnBC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBtnBC" />

        <RadioButton
            android:id="@+id/radioBtnFABC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBtnFABC" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="20dp"
        android:text="@string/button"
        android:onClick="setColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@android:drawable/ic_dialog_info" />
</android.support.constraint.ConstraintLayout>
